Pantallas en HTML
Solo esas hize ya tengo, sueño mañana sigo

--- a/AcessoAlSistema.html
+++ b/AcessoAlSistema.html
@@ -32,7 +32,7 @@
 
             <tr>
         
-                <td colspan="2" style="position: relative; ; width: 50%; height: 3cm;"><center><input type="button" value="Ingresar" style="color: white; background-color: black; width: 25%;"> </center></td>
+                <td colspan="2" style="position: relative; ; width: 50%; height: 3cm;"><center><input type="button" name="Cargar" value="GUARDAR" style="color: white; background-color: black; width: 25%;"> </center></td>
             </tr>
 
 
